--- a/package.json
+++ b/package.json
@@ -28,6 +28,9 @@
     "prettier": "3.6.2"
   },
   "dependencies": {
+    "@fastify/cookie": "^11.0.2",
+    "@fastify/cors": "^11.0.1",
+    "@fastify/jwt": "^9.1.0",
     "dotenv": "^17.2.1",
     "fastify": "^5.4.0"
   }
