--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "@fastify/cors": "^11.0.1",
     "@fastify/jwt": "^9.1.0",
     "dotenv": "^17.2.1",
+    "envalid": "^8.1.0",
     "fastify": "^5.4.0"
   }
 }
