--- a/.env-example
+++ b/.env-example
@@ -5,8 +5,8 @@ NODE_ENV=production
 # Server
 PORT=3000
 
-# JWT Secret
+# JWT Secret (HS512 algorithm)
 JWT_SECRET=your_jwt_secret_here
 
 # Database
-SQLITE_DB_PATH=./path/to/pix-payments.db
+SQLITE_DB_PATH=./path/to/pix_payments.db
