--- a/.env-example
+++ b/.env-example
@@ -8,5 +8,12 @@ PORT=3000
 # JWT Secret (HS512 algorithm)
 JWT_SECRET=your_jwt_secret_here
 
-# Database
-SQLITE_DB_PATH=./path/to/pix_payments.db
+# Database (SQLite)
+SQLITE_DB_PATH=./data/pix_payments.db
+
+# Database (PostgreSQL)
+POSTGRES_HOST=pgsql
+POSTGRES_PORT=5432
+POSTGRES_USER=pix_user
+POSTGRES_PASSWORD=pix_password
+POSTGRES_DB=pix_payments
