--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,10 +3,33 @@ services:
     image: keinos/sqlite3:latest
     container_name: pix-payments-sqlite
     volumes:
-      - ./data:/data
+      - ./data/sqlite:/data
     command: tail -f /dev/null
     networks:
       - pix-payments-network
+  pgsql:
+    image: postgres:latest
+    container_name: pix-payments-postgres
+    environment:
+      POSTGRES_USER: pix_user
+      POSTGRES_PASSWORD: pix_password
+      POSTGRES_DB: pix_payments
+    ports:
+      - "5432:5432"
+    volumes:
+      - ./data/postgres:/var/lib/postgresql/data
+    networks:
+      - pix-payments-network
+  adminer:
+    image: adminer:latest
+    container_name: pix-payments-adminer
+    ports:
+      - "8080:8080"
+    networks:
+      - pix-payments-network
+    depends_on:
+      - sqlite
+      - pgsql
 
 networks:
   pix-payments-network:
