--- a/package.json
+++ b/package.json
@@ -33,6 +33,8 @@
     "@fastify/jwt": "^9.1.0",
     "dotenv": "^17.2.1",
     "envalid": "^8.1.0",
-    "fastify": "^5.4.0"
+    "fastify": "^5.4.0",
+    "pg": "^8.16.3",
+    "sqlite3": "^5.1.7"
   }
 }
