refactor: drop sqlite support

--- a/.env-example
+++ b/.env-example
@@ -8,12 +8,9 @@ PORT=3100
 # JWT Secret (HS512 algorithm)
 JWT_SECRET=your_jwt_secret_here
 
-# Database (SQLite)
-SQLITE_DB_PATH=./data/pix_payments.db
-
-# Database (PostgreSQL)
-POSTGRES_HOST=pgsql
-POSTGRES_PORT=5432
-POSTGRES_USER=pix_user
-POSTGRES_PASSWORD=pix_password
-POSTGRES_DB=pix_payments
+# Database
+DB_HOST=pgsql
+DB_PORT=5432
+DB_USER=pix_user
+DB_PASSWORD=pix_password
+DB_NAME=pix_payments
