refactor: rewrite the index creation loop using map

--- a/.env-example
+++ b/.env-example
@@ -9,7 +9,7 @@ PORT=3100
 JWT_SECRET=your_jwt_secret_here
 
 # Database
-DB_HOST=pgsql
+DB_HOST=127.0.0.1
 DB_PORT=5432
 DB_USER=pix_user
 DB_PASSWORD=pix_password
