--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,6 +1,7 @@
 services:
   pgsql:
     image: postgres:latest
+    restart: always
     container_name: pix-payments-postgres
     environment:
       POSTGRES_USER: pix_user
