--- a/package.json
+++ b/package.json
@@ -8,7 +8,10 @@
     "build": "babel src -d dist",
     "start": "npm run build && node dist/server.js",
     "lint": "eslint .",
-    "lint:fix": "eslint . --fix"
+    "lint:fix": "eslint . --fix",
+    "test": "jest",
+    "test:watch": "jest --watch",
+    "test:coverage": "jest --coverage"
   },
   "keywords": [],
   "author": "Talvanes Ferreira",
@@ -19,11 +22,13 @@
     "@babel/node": "^7.28.0",
     "@babel/preset-env": "^7.28.0",
     "@eslint/js": "^9.31.0",
+    "@jest/globals": "^30.0.5",
     "babel-plugin-module-resolver": "^5.0.2",
     "eslint": "^9.31.0",
     "eslint-config-prettier": "^10.1.8",
     "eslint-plugin-prettier": "^5.5.3",
     "globals": "^16.3.0",
+    "jest": "^30.0.5",
     "nodemon": "^3.1.10",
     "prettier": "3.6.2"
   },
