--- a/.env-example
+++ b/.env-example
@@ -10,6 +10,8 @@ JWT_SECRET=your_jwt_secret_here
 
 # Database
 DB_HOST=127.0.0.1
+#DB_HOST=host.docker.internal
+#DB_HOST=pgsql
 DB_PORT=5432
 DB_USER=pix_user
 DB_PASSWORD=pix_password
