feat: create migration script

--- a/package.json
+++ b/package.json
@@ -11,7 +11,11 @@
     "lint:fix": "eslint . --fix",
     "test": "jest",
     "test:watch": "jest --watch",
-    "test:coverage": "jest --coverage"
+    "test:coverage": "jest --coverage",
+    "migrate": "babel-node src/db/migrate.js up",
+    "migrate:down": "babel-node src/db/migrate.js down",
+    "migrate:init": "babel-node src/db/migrate.js init",
+    "migrate:status": "babel-node src/db/migrate.js status"
   },
   "keywords": [],
   "author": "Talvanes Ferreira",
