--- a/package.json
+++ b/package.json
@@ -40,9 +40,11 @@
     "@fastify/cookie": "^11.0.2",
     "@fastify/cors": "^11.0.1",
     "@fastify/jwt": "^9.1.0",
+    "chalk": "^5.5.0",
     "dotenv": "^17.2.1",
     "envalid": "^8.1.0",
     "fastify": "^5.4.0",
+    "inquirer": "^12.9.0",
     "pg": "^8.16.3"
   }
 }
