test(migrations): set up testing

--- a/package.json
+++ b/package.json
@@ -12,10 +12,10 @@
     "test": "jest",
     "test:watch": "jest --watch",
     "test:coverage": "jest --coverage",
-    "migrate": "babel-node src/db/migrate.js up",
-    "migrate:down": "babel-node src/db/migrate.js down",
-    "migrate:init": "babel-node src/db/migrate.js init",
-    "migrate:status": "babel-node src/db/migrate.js status"
+    "migrate": "babel-node src/db/migrate-cli.js up",
+    "migrate:down": "babel-node src/db/migrate-cli.js down",
+    "migrate:init": "babel-node src/db/migrate-cli.js init",
+    "migrate:status": "babel-node src/db/migrate-cli.js status"
   },
   "keywords": [],
   "author": "Talvanes Ferreira",
