--- a/package.json
+++ b/package.json
@@ -11,11 +11,7 @@
     "lint:fix": "eslint . --fix",
     "test": "jest",
     "test:watch": "jest --watch",
-    "test:coverage": "jest --coverage",
-    "migrate": "babel-node src/db/migrate-cli.js up",
-    "migrate:down": "babel-node src/db/migrate-cli.js down",
-    "migrate:init": "babel-node src/db/migrate-cli.js init",
-    "migrate:status": "babel-node src/db/migrate-cli.js status"
+    "test:coverage": "jest --coverage"
   },
   "keywords": [],
   "author": "Talvanes Ferreira",
@@ -40,11 +36,10 @@
     "@fastify/cookie": "^11.0.2",
     "@fastify/cors": "^11.0.1",
     "@fastify/jwt": "^9.1.0",
-    "chalk": "^5.5.0",
     "dotenv": "^17.2.1",
     "envalid": "^8.1.0",
     "fastify": "^5.4.0",
-    "inquirer": "^12.9.0",
+    "knex": "^3.1.0",
     "pg": "^8.16.3",
     "ts-pattern": "^5.8.0"
   }
