feat: implement authentication and dashboard routes with controllers (part 1)

--- a/jsconfig.json
+++ b/jsconfig.json
@@ -2,9 +2,9 @@
   "compilerOptions": {
     "baseUrl": ".",
     "paths": {
-      "@/*": ["src/*"],
-      "@root/*": ["src/*"],
-      "@tests/*": ["tests/*"]
+      "@/*": ["./src/*"],
+      "@root/*": ["./src/*"],
+      "@tests/*": ["./tests/*"]
     }
   }
 }
