--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "1.0.0",
   "description": "PIX payment system with user authentication and real-time dashboard monitoring. The server part.",
   "main": "src/server.js",
-  "type": "module",
+  "type": "commonjs",
   "scripts": {
     "dev": "nodemon",
     "build": "babel src -d dist",
@@ -45,7 +45,6 @@
     "envalid": "^8.1.0",
     "fastify": "^5.4.0",
     "knex": "^3.1.0",
-    "pg": "^8.16.3",
-    "ts-pattern": "^5.8.0"
+    "pg": "^8.16.3"
   }
 }
