--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -14,6 +14,7 @@
     "jsconfig.json": "settings",
     ".env-example": "tune",
     "*.plugin.js": "key",
-    "*.schema.js": "json"
+    "*.schema.js": "json",
+    "routes/index.js": "tree"
   },
 }
