--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
     "envalid": "^8.1.0",
     "fastify": "^5.4.0",
     "knex": "^3.1.0",
-    "pg": "^8.16.3"
+    "pg": "^8.16.3",
+    "pino-pretty": "^13.1.1"
   }
 }
