Refactor server entry point and authentication handling
- Changed the main entry point from src/server.js to src/app.js.
- Updated the development script to use babel-node for hot reloading.
- Removed the old authentication plugin and replaced it with a new JWT check implementation.
- Updated authentication routes to use the new JWT check function.
- Refactored dashboard and PIX routes to utilize the new JWT check for protected endpoints.
- Removed the startServer function from src/server.js as the server is now started in src/app.js.
- Added a new checkJWTRequest function to handle JWT verification using jsonwebtoken.

--- a/package.json
+++ b/package.json
@@ -2,12 +2,12 @@
   "name": "pix-payments-server",
   "version": "1.0.0",
   "description": "PIX payment system with user authentication and real-time dashboard monitoring. The server part.",
-  "main": "src/server.js",
+  "main": "src/app.js",
   "type": "module",
   "scripts": {
-    "dev": "node --watch src/server.js",
+    "dev": "babel-node --watch src/app.js",
     "build": "babel src -d dist",
-    "start": "npm run build && node dist/server.js",
+    "start": "npm run build && node dist/app.js",
     "lint": "eslint .",
     "lint:fix": "eslint . --fix",
     "test": "jest",
@@ -24,10 +24,10 @@
   "devDependencies": {
     "@babel/cli": "^7.28.0",
     "@babel/core": "^7.28.0",
+    "@babel/node": "^7.28.0",
     "@babel/preset-env": "^7.28.0",
     "@eslint/js": "^9.31.0",
     "@jest/globals": "^30.0.5",
-    "babel-plugin-module-resolver": "^5.0.2",
     "eslint": "^9.31.0",
     "eslint-config-prettier": "^10.1.8",
     "eslint-plugin-prettier": "^5.5.3",
@@ -42,6 +42,7 @@
     "dotenv": "^17.2.1",
     "envalid": "^8.1.0",
     "fastify": "^5.4.0",
+    "jsonwebtoken": "^9.0.2",
     "knex": "^3.1.0",
     "pg": "^8.16.3",
     "pino-pretty": "^13.1.1"
