refactor: restructure server startup logic and update babel configuration

--- a/package.json
+++ b/package.json
@@ -6,8 +6,9 @@
   "type": "module",
   "scripts": {
     "dev": "babel-node --watch src/app.js",
-    "build": "babel src -d dist",
-    "start": "npm run build && node dist/app.js",
+    "build": "babel src --out-dir dist",
+    "prestart": "npm run build",
+    "start": "node dist/app.js",
     "lint": "eslint .",
     "lint:fix": "eslint . --fix",
     "test": "jest",
@@ -28,6 +29,7 @@
     "@babel/preset-env": "^7.28.0",
     "@eslint/js": "^9.31.0",
     "@jest/globals": "^30.0.5",
+    "babel-plugin-polyfill-corejs3": "^0.13.0",
     "eslint": "^9.31.0",
     "eslint-config-prettier": "^10.1.8",
     "eslint-plugin-prettier": "^5.5.3",
