refactor: move migrations to database folder instead of db

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -6,7 +6,7 @@
     "source.removeUnusedImports": "explicit"
   },
   "material-icon-theme.folders.associations": {
-    "db/migrations": "tools",
+    "database/migrations": "tools",
     "http/schemas": "json"
   },
   "material-icon-theme.files.associations": {
