fix: update Jest configuration for experimental VM modules and adjust test scripts

--- a/package.json
+++ b/package.json
@@ -11,9 +11,9 @@
     "start": "node dist/app.js",
     "lint": "eslint .",
     "lint:fix": "eslint . --fix",
-    "test": "jest",
-    "test:watch": "jest --watch",
-    "test:coverage": "jest --coverage",
+    "test": "NODE_OPTIONS=\"$NODE_OPTIONS --experimental-vm-modules\" jest",
+    "test:watch": "npm run test -- --watch",
+    "coverage": "npm run test -- --coverage",
     "migrate": "knex migrate:latest",
     "migrate:rollback": "knex migrate:rollback",
     "migrate:make": "knex migrate:make",
